@@ -1,5 +1,8 @@
 CHANGES:
 
+22/8/2014:
+- MacDraw II: add a parser for MacDraw II v1.0-v1.1
+
 -------- version 0.3.3 (start)  -------------
 
 28/7/2014:
